# Q-control-Research

./: README.md
DRLvsDRL(ngrc)/: DRL+NGRC.ipynb  DRLonly.ipynb
DRLvsDRL(ngrc)/qpulse_ngrc/: README.md  pyproject.toml
DRLvsDRL(ngrc)/qpulse_ngrc/src/qpulse_nav/: cli.py
PCE-QAOA/: 18maxcut.ipynb
Q-bit Pulse optimaization/: H-gate-opt.ipynb  Rx(pi:2)-gate-opt.ipynb
Qbit Pulse opt/: DRLonly.ipynb
Qbit Pulse opt/qpulse_ngrc/: LICENSE
Qbit Pulse opt/qpulse_ngrc/src/qpulse_nav/: __init__.py  pipeline.py
Qbit Pulse opt/qpulse_ngrc/tests/: test_import.py
code(PF)/: README.md  run.sh  tensorboard.sh
code(PF)/Docker/: Dockerfile  docker-compose.yml  requirements.txt  requirements_dependence.txt
code(PF)/Double_harmonic_oscillator_model/: Dockerfile  main.py
code(PF)/Double_harmonic_oscillator_model/custom_gym_env/: __init__.py
code(PF)/Double_harmonic_oscillator_model/custom_gym_env/envs/: __init__.py  double_harmonic_oscillator.py  double_quantum_environment.py  smesolve.py
code(PF)/Plot_Result/: density_matrix_plot.py  fidelity_plot.py  reward_plot.py
