[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpulse-ngrc"
version = "0.1.0"
description = "NG-RC guided policy-gradient pulse design for IBM Quantum (Qiskit + TensorFlow)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [{ name = "Your Name" }]
dependencies = [
  "qiskit>=1.1",
  "qiskit-aer>=0.14",
  "qiskit-ibm-runtime>=0.25",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "tensorflow>=2.13",
  "tensorflow-probability>=0.21",
]

[project.urls]
Homepage = "https://example.com/qpulse-ngrc"

[project.scripts]
qpulse-run = "qpulse_nav.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
